glx: #ifdef DRI specific prototype

https://bugs.freedesktop.org/show_bug.cgi?id=29162